 * User interface:
   * Don't reserve space for scrollbars in message dialogs
 * WML Engine:
   * Fix bug #14859: [time_area] created by event are not saved.
 * Miscellaneous and bugfixes:
   * Fix bug #14865: move+attack into hex with ambusher causes crash.
   * Shorter "Initializing Display" phase when staying in same campaign/MP.
   * Optimize AI recruitement and movement phases.

Version 1.7.9-beta2:
 * AI:
   * new [limit] subtag of [value] of ai_default::recruitment implementation of
     recruitment aspect - allow easy limiting of number of concurrent recruits
     of specific type in the field
   * new rate_action formula_ai function which returns a rating of 
     attack analysis.
   * values of most ai aspects are now readable from formula ai (aggression,
     avoid, attacks, attack_depth, caution, grouping, leader_aggression,
     leader_value, number_of_possible_recruits_to_force_recruit, passive_leader,
     passive_leader_shares_keep, recruitment_ignore_bad_movement,
     recruitment_ignore_bad_combat, recruitment_pattern,
     scout_village_targeting, support_villages, village_value,
     villages_per_scout)
   * Fixed Bug #14768: made AI observe changes in allowed recruits, preventing
     situations where AI does not recruit because it thinks that it can not do
     so.
 * Campaigns:
   * Northern Rebirth:
     * Fixed a few graphic bugs with map items
   * The Rise of Wesnoth:
     * Removed the undead trait from several custom bat units
 * Graphics:
   * New animations for the Chocobone.
   * Change which Orc Grunt portrait appears is the default.
   * New portrait for Orc Warrior
   * New portrait for Hamel (tHoT)
 * Language and i18n:
   * Updated translations: Czech, French, German, Italian, Latin, Lithuanian,
     Polish, Portuguese (Brazil), Russian, Serbian, Slovak.
 * Multiplayer:
   * Updated maps: Caves of the Basilisk, Hornshark Island, Howling Ghost
     Badlands, Sablestone Delta
 * Music and sound effects: